# countdown.mattdavis.info

./: README.md  index.html  main.css
.github/workflows/: ci.yaml
backend/: .dockerignore  Cargo.toml  Dockerfile  README.md  start.sh
backend-countdown/: .gitignore  package-lock.json  package.json
backend-countdown/app/: credentials.js  main.js  validation.js
backend/.github/workflows/: ci.yaml
backend/src/: lib.rs  main.rs
backend/src/countdown/: countdown_manager.rs  event.rs  mod.rs  timestamp.rs
frontend/: .env.development  .env.production  .gitignore  Dockerfile  package-lock.json  package.json  start.sh  tsconfig.json  vite.config.js
frontend-countdown/: .gitignore  README.md  angular.json  karma.conf.js  package-lock.json  package.json  proxy.conf.json
frontend-countdown/e2e/src/: app.e2e-spec.ts
frontend-countdown/src/: index.html  styles.css
frontend-countdown/src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts  backendURL-template.ts  error-handler.service.ts
frontend-countdown/src/app/countdown/: countdown.component.html  countdown.component.ts
frontend-countdown/src/app/create-countdown/: create-countdown.component.html  create-countdown.component.ts
frontend/src/: app.html
frontend/src/routes/: index.svelte
frontend/src/routes/id/: [id].svelte  [id].ts
