[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
chrono = { version = "0.4.19", features = ["serde"] }
rand = "0.8.5"
serde = "1.0.137"
rusqlite = { version = "0.27.0", features = ["bundled"] }
rocket_cors = "0.6.0-alpha1"

[env]
FRONTEND_URL = "http://127.0.0.1:5173/"